plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'nu.studer.jooq' version '8.2'
	id 'org.liquibase.gradle' version '2.2.0'
}

group = 'org.ipredencao'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot starters
	implementation 'org.springframework.boot:spring-boot-starter-jooq'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

	// DB — versões gerenciadas pelo Spring Boot BOM; Liquibase e Postgres plugin
	// precisam de versão explícita apenas para o runtime do Gradle (fora do classpath Spring).
	implementation 'org.liquibase:liquibase-core'
	runtimeOnly 'org.postgresql:postgresql'
	jooqGenerator 'org.postgresql:postgresql:42.7.3'
	liquibaseRuntime 'org.liquibase:liquibase-core:4.27.0'
	liquibaseRuntime 'org.postgresql:postgresql:42.7.3'
	liquibaseRuntime 'info.picocli:picocli:4.7.5'

	// Libs
	implementation 'joda-time:joda-time:2.14.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.681'
	implementation 'com.amazonaws:aws-java-sdk-lambda:1.12.681'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	// Novas dependências para autenticação
	implementation 'com.google.firebase:firebase-admin:9.2.0'
	
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	
	// Security & Validation
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	// Monitoring & Documentation
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	
	// Testing adicional
	testImplementation 'org.springframework.security:spring-security-test'

	// Testcontainers (IT com Postgres efêmero) — versões gerenciadas pelo Spring Boot BOM
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'org.testcontainers:junit-jupiter'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '-Xmx512m'
	// Fail fast: para no primeiro teste que falhar (util em CI).
	failFast = true
	testLogging {
		events 'passed', 'skipped', 'failed'
		exceptionFormat 'full'
		showStandardStreams = false
	}
}

jooq {
	version = '3.19.7'
	edition = 'OSS'
	configurations {
		main {
			generateSchemaSourceOnCompilation = true
			generationTool {
				jdbc {
					driver = 'org.postgresql.Driver'
					url = 'jdbc:postgresql://localhost:54329/ipredencao_manager'
					user = 'ipredencao_manager'
					password = 'ipredencao_manager'
				}
				generator {
					name = 'org.jooq.codegen.DefaultGenerator'
					database {
						name = 'org.jooq.meta.postgres.PostgresDatabase'
						inputSchema = 'public'
					}
					target {
						packageName = 'org.ipredencao.ipredencao_manager.jooq'
						directory = 'target/generated-sources/jooq'
					}
				}
			}
		}
	}
}

liquibase {
	activities {
		main {
			// searchPath + changelogFile relativo garantem que o filename gravado
			// em databasechangelog seja 'db/changelog/...', igual ao que o
			// Spring Boot Liquibase (classpath:db/changelog/...) usa em prod e
			// no container local. Evita divergencia de paths entre Gradle e Spring.
			searchPath 'src/main/resources'
			changelogFile 'db/changelog/db.changelog-master.xml'
			url 'jdbc:postgresql://localhost:54329/ipredencao_manager'
			username 'ipredencao_manager'
			password 'ipredencao_manager'
		}
	}
	runList = 'main'
}

tasks.register('composeUp', Exec) {
	// Coloquei /usr/local/bin/docker pois docker não estava acessível no PATH após mudar nome de usuário 
	commandLine '/usr/local/bin/docker', 'compose', 'up', '-d', '--wait', 'postgres', 'localstack'
}

tasks.named('update') {
	// Em CI (GHA) o Postgres vem de service container; localmente sobe via compose.
	if (!System.getenv('CI')) {
		dependsOn composeUp
	}
}

tasks.named('generateJooq') {
	dependsOn 'update'
}

tasks.named('build') {
	dependsOn 'generateJooq'
}
